tests/dev_server/errors/stories/js_module_throw_string/main.js
// above: comment
// above: to
// above: increase line numbers
// eslint-disable-next-line no-throw-literal
/* before */ throw "hello"; /* after */
// below: comment
// below: to
// below: increase line numbers
